--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Loptop</title>
+    <title>Laptop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: red; text-align: center;">Loptiop</h1>
-    <p style="color: #777; text-align: center;">mohan's laptop very lazy</p>
+    <h1 style="color: red; text-align: center;">Laptop</h1>
+    <p style="color: #777; text-align: center;">Mohan's laptop very lazy</p>
 </body>
 </html>
