--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1 style="color: red; text-align: center;">Laptop</h1>
-    <p style="color: #777; text-align: center;">Mohan's laptop very lazy</p>
+    <p style="color: #777; text-align: center;">Mohan's laptop very lazy</p> 
+    <p style="font-family: Arial, Helvetica, sans-serif; font-size: 55px; text-align: center;">Sai Laptop working but he is not working with laptop.</p>
 </body>
 </html>
