--- a/index.html
+++ b/index.html
@@ -10,5 +10,21 @@
     <h1 style="color: red; text-align: center;">Laptop</h1>
     <p style="color: #777; text-align: center;">Mohan's laptop very lazy</p> 
     <p style="font-family: Arial, Helvetica, sans-serif; font-size: 55px; text-align: center;">Sai Laptop working but he is not working with laptop.</p>
+    <form action="/action_page.php">
+        <div class="mb-3 mt-3">
+          <label for="email" class="form-label">Email:</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        </div>
+        <div class="mb-3">
+          <label for="pwd" class="form-label">Password:</label>
+          <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+        </div>
+        <div class="form-check mb-3">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" name="remember"> Remember me
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 </body>
 </html>
