--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <label for="email" class="form-label">Email:</label>
           <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
         </div>
-        <div class="mb-3"><br>
+        <div class="mb-3"><p>
           <label for="pwd" class="form-label">Password:</label>
           <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
         </div>
